--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@ Hayate.xcodeproj/project.xcworkspace/xcuserdata/duanwenwu.xcuserdatad/UserInterf
 Hayate.xcodeproj/xcuserdata/duanwenwu.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 
 Hayate.xcodeproj/xcuserdata/duanwenwu.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+Hayate.xcodeproj/project.xcworkspace/xcuserdata/duanwwu.xcuserdatad/UserInterfaceState.xcuserstate
+
+Hayate.xcodeproj/xcuserdata/duanwwu.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+Hayate.xcodeproj/project.xcworkspace/xcuserdata/duanwwu.xcuserdatad/UserInterfaceState.xcuserstate
+
+Hayate.xcodeproj/project.xcworkspace/xcuserdata/duanwwu.xcuserdatad/UserInterfaceState.xcuserstate
+
+Hayate.xcodeproj/project.xcworkspace/xcuserdata/duanwwu.xcuserdatad/UserInterfaceState.xcuserstate
+
+Hayate.xcodeproj/project.xcworkspace/xcuserdata/duanwwu.xcuserdatad/UserInterfaceState.xcuserstate
+
+Hayate.xcodeproj/xcuserdata/duanwwu.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
